@@ -105,6 +105,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [FilterS] Added *apiban filter
   * [EEs] Add support for *elastic exporter
   * [AttributeS] Add support for adding fields from other places that event (e.g. Resource.TotalUsage, Stat.MetricName, Account.Balance)
+  * [Templates] Added Epoch as custom case for *time_string
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
